src/objects/Project_Bid__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Spend__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Spend</label>
        <referenceTo>Project_Spend__c</referenceTo>
        <relationshipLabel>Project Bids</relationshipLabel>
        <relationshipName>Project_Bids</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Project Bids</relationshipLabel>
        <relationshipName>Project_Bids</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Project Bid</label>
    <nameField>
        <displayFormat>PB-{000000}</displayFormat>
        <label>Project Bid Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Bids</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>